============
Five Changes
============

Five 1.3 (unreleased)
=====================

Bugfixes
--------

* Fix functional test for local sites and re-enable it for standard
  test runs.

* If one class was set to have a localsite hook twice, removing the hook would be
  attempted twice during the cleanup of unit tests, and the tests would fail.

Five 1.3c (2005-12-06)
======================

This version is also included in Zope 2.9b1.

Restructuring
-------------

* (b6) No longer use the ``defaultLayer`` directive, it's been deprecated.

* (b4) Cleaned up security test.

* (b4) Made Five send a ContainerModifiedEvent when appropriate.

Bugfixes
--------

* (b6) Fixed the form i18n messages to work with Zope 3.2 beta 1.

* (b3) Made the creation of custom skins work again.  It was broken in
  the port to Zope 3.2.

* (b2) Fixed bug that broke WebDAV access for five:defaultViewable
  objects. The __browser_default__ now modifies only GET and POST
  requests.

* (b2) Fixed some event recursion compatibility modes.

Five 1.3b (2005-11-02)
======================

Restructuring
-------------

* Support for Zope 3.2 was added. Five now requires Zope 2.9 (which
  ships with Zope 3.2).

* As scheduled, the temporary fork of the new test runner
  (``zope.testing``) at ``Five.testing`` was removed.  So was the
  ``runtests.py`` script.  Use the regular Zope test runner
  (``test.py`` or ``bin/zopectl test``) to run tests.

* To reflect the Component Architecture simplification in Zope 3 since
  the X3 3.0 release, ``IFiveUtilityService`` was renamed to
  ``IFiveUtilityRegistry`` and ``SimpleLocalUtilityService`` was
  renamed to ``SimpleLocalUtilityRegistry``.  The old names are still
  available for a short period of time.

* Event support: ``<five:containerEvents/>`` is the default.

* Due to an incompatability with Zope 3.2's ObjectWidget and Zope 2's
  Page Templates, Five now ships with its own ObjectWidget